--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Datasets
+data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -112,3 +115,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
