--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "[Features] Extract Features",
             "type": "python",
             "request": "launch",
-            "program": "./src/train.py",
+            "program": "./src/features/main.py",
             "console": "integratedTerminal"
         }
     ]
