--- a/configurations.json
+++ b/configurations.json
@@ -1,17 +1,19 @@
 {
     "default": {
-        "srl_labels": ["A0","A1","V","AM-TMP","AM-CAU","AM-LOC","A2"],
-        "max_pred_span": 2,
-        "max_arg_span": 10,
-        "max_tokens": 25,
+        "srl_labels": ["A0","A1","V","AM-TMP","AM-CAU","AM-LOC","A2","AM-DIR", "AM-MNR"],
+        "max_pred_span": 1,
+        "max_arg_span": 3,
+        "max_tokens": 5,
         "num_srl_labels": 21,
         "char_vocab": 95,
-        "char_output_dim": 200,
-        "char_cnn_kernel_size": 3,
+        "char_output_dim": 8,
+        "char_filter_size": 50,
+        "char_cnn_kernel_size": [3, 4, 5],
         "max_char": 52,
         "dropout_value": 0.4,
-        "lstm_layers": 2,
-        "lstm_units": 300,
+        "lstm_layers": 1,
+        "lstm_units": 200,
+        "num_heads": 2,
         "char_dropout": 0.3,
         "unary_depth": 2,
         "unary_units": 150,
