--- a/configurations.json
+++ b/configurations.json
@@ -22,9 +22,9 @@
         "mlp_pred_units": 150,
         "mlp_arg_units": 150,
         "span_width_emb": 20,
-        "train_data": "/data/raw/batch1.csv",
-        "word_emb_path":"data/raw/word2vec_news.model",
-        "fasttext_emb_path": "data/raw/kyubyong.ft.id.bin",
+        "train_data": "../../data/raw/batch1.csv",
+        "word_emb_path":"../../data/raw/word2vec_news.model",
+        "fasttext_emb_path": "../../data/raw/kyubyong.ft.id.bin",
         "batch_size": 32,
         "epoch": 80,
         "use_fasttext": true
