--- a/configurations.json
+++ b/configurations.json
@@ -28,9 +28,9 @@
         "batch_size": 32,
         "epochs": 80,
         "use_fasttext": true,
-        "features_1": "train_word_emb.npy",
-        "features_2":"train_fasttext.npy",
-        "features_3": "train_char_input.npy",
+        "features_1": "data/features/train_word_emb.npy",
+        "features_2":"data/features/train_fasttext.npy",
+        "features_3": "data/features/train_char_input.npy",
         "train_out": "data/features/output_train.npy",
         "processed_sent": "data/processed/sentences.npy",
         "processed_arg_list": "data/processed/arg_list.npy",
