--- a/configurations.json
+++ b/configurations.json
@@ -25,13 +25,14 @@
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
-        "batch_size": 8,
+        "batch_size": 16,
         "epochs": 80,
-        "use_fasttext": true,
-        "features_1": "data/features/train_word_emb.npy",
-        "features_2":"data/features/train_fasttext.npy",
-        "features_3": "data/features/train_char_input.npy",
-        "train_out": "data/features/output_train.npy",
+        "use_fasttext": false,
+        "features_dir": "data/features/",
+        "features_1": "word_emb.npy",
+        "features_2":"fasttext.npy",
+        "features_3": "char_input.npy",
+        "output": "output.npy",
         "processed_sent": "data/processed/sentences.npy",
         "processed_arg_list": "data/processed/arg_list.npy",
         "processed_padded_sent": "data/processed/padded_sent.npy"
