--- a/configurations.json
+++ b/configurations.json
@@ -3,8 +3,8 @@
         "srl_labels": ["ARG0","ARG1","ARG2","AM-MOD","AM-ADV","REL","AM-TMP","AM-CAU","AM-LOC","AM-DIR", "AM-MNR","AM-DIS","AM-PRD","ARG3","ARG4","AM-LVB","AM-PRP","AM-COM","AM-GOL","AM-EXT","AM-REC","AM-NEG","AM-ADJ"],
         "max_pred_span": 2,
         "max_arg_span": 26,
-        "max_predicates": 2,
-        "max_arguments": 20,
+        "max_predicates": 20,
+        "max_arguments": 614,
         "max_tokens": 49,
         "max_char": 52,
         "char_vocab": 95,
@@ -26,11 +26,12 @@
         "word_emb_path":"data/pretrained/word2vec_news.model",
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
         "batch_size": 16,
-        "epochs": 80,
+        "epochs": 60,
         "use_fasttext": false,
         "features_dir": "data/features/",
-        "features_1": "word_emb.npy",
-        "features_2":"fasttext.npy",
+        "features_1": "word_emb_w2v.npy",
+        "features_1.1": "word_emb_ft.npy",
+        "features_2":"bert.npy",
         "features_3": "char_input.npy",
         "output": "output.npy",
         "processed_sent": "data/processed/sentences.npy",
