--- a/configurations.json
+++ b/configurations.json
@@ -27,7 +27,7 @@
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
         "batch_size": 16,
         "epochs": 60,
-        "use_fasttext": false,
+        "use_fasttext": true,
         "features_dir": "data/features/",
         "features_1": "word_emb_w2v.npy",
         "features_1.1": "word_emb_ft.npy",
