Squashed commit of the following:
commit 1ee34c598cb03fe7da9bb6a8466b851f04c8475c
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 20:29:06 2022 +0700

    Update configurations.json

commit 789acdc2a98e73e2ccd6ab96091c928e6f589649
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 20:22:57 2022 +0700

    prepare to train

commit 7ec671bc2c592d3f6cfd22629cfdc94f113aac02
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 19:41:43 2022 +0700

    Update SRLData.py

commit a4567d3ff3206fc42ba6551a9ea73bb0b0da45e1
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 19:38:38 2022 +0700

    Update fetch_all_datas.sh

commit 28e53fa9169d4abae19c27207e4e7a985cbf5221
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 19:29:40 2022 +0700

    bert

commit d9c629b4bd549761b6790f7e74f852bb6dcce76f
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 16:50:41 2022 +0700

    reduce batch size

commit ee4d4765a49378c06743e6170c6c71a7d4b04124
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 16:44:13 2022 +0700

    reduce batch size

commit 4c9d6517ff1e7afcb39927710e74c0323d6cc1a3
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 16:35:03 2022 +0700

    feat: compress

commit 6ecca8454433eb0067967644a79058e9d4d50a22
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 15:58:54 2022 +0700

    Update fetch_all_datas.sh

commit 922af10d11af79cb164b54e694e78f3a49abef90
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 15:53:10 2022 +0700

    Update fetch_all_datas.sh

commit cc4650a53478f8ba9e0cfa232a84bb5079e7f261
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 15:51:15 2022 +0700

    coba

commit f954678709fd992abb37adc1d60607fb3f46ba0a
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 15:33:06 2022 +0700

    test

commit 3d9610f40b2ff3182950211e06563577638bdbcc
Author: Felicia Gojali <gojalif@gmail.com>
Date:   Tue Feb 1 14:53:01 2022 +0700

    Update

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "[Features] Extract Features",
+            "type": "python",
+            "request": "launch",
+            "program": "./src/features/main.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "[Main] Train",
             "type": "python",
             "request": "launch",
             "program": "./src/train.py",
