--- a/configurations.json
+++ b/configurations.json
@@ -16,11 +16,12 @@
         "dropout_value": 0.2,
         "lstm_layers": 3,
         "lstm_units": 200,
+        "lstm_dropout": 0.4,
         "num_heads": 1,
         "unary_depth": 2,
         "unary_units": 150,
-        "mlp_pred_units": 150,
-        "mlp_arg_units": 150,
+        "mlp_pred_units": 300,
+        "mlp_arg_units": 300,
         "span_width_emb": 20,
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
