--- a/configurations.json
+++ b/configurations.json
@@ -26,7 +26,7 @@
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
-        "batch_size": 8,
+        "batch_size": 6,
         "epochs": 60,
         "use_fasttext": true,
         "features_dir": "data/features/",
@@ -37,7 +37,8 @@
         "output": "output.npy",
         "processed_sent": "data/processed/sentences.npy",
         "processed_arg_list": "data/processed/arg_list.npy",
-        "processed_padded_sent": "data/processed/padded_sent.npy"
+        "processed_padded_sent": "data/processed/padded_sent.npy",
+        "model_path":"models/default_fasttext_True"
 
     }
 }
