--- a/configurations.json
+++ b/configurations.json
@@ -4,7 +4,7 @@
         "max_pred_span": 2,
         "max_arg_span": 26,
         "max_predicates": 20,
-        "max_arguments": 800,
+        "max_arguments": 614,
         "max_tokens": 49,
         "max_char": 52,
         "char_vocab": 95,
@@ -20,8 +20,8 @@
         "num_heads": 1,
         "unary_depth": 2,
         "unary_units": 150,
-        "mlp_pred_units": 300,
-        "mlp_arg_units": 300,
+        "mlp_pred_units": 150,
+        "mlp_arg_units": 150,
         "span_width_emb": 20,
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
@@ -39,7 +39,7 @@
         "processed_sent": "data/processed/sentences.npy",
         "processed_arg_list": "data/processed/arg_list.npy",
         "processed_padded_sent": "data/processed/padded_sent.npy",
-        "model_path":"models/ft_60_decay"
+        "model_path":"models/ft_60_150unit_decay"
     },
     "fasttext": {
         "srl_labels": ["ARG0","ARG1","ARG2","AM-MOD","AM-ADV","REL","AM-TMP","AM-CAU","AM-LOC","AM-DIR", "AM-MNR","AM-DIS","AM-PRD","ARG3","ARG4","AM-LVB","AM-PRP","AM-COM","AM-GOL","AM-EXT","AM-REC","AM-NEG","AM-ADJ"],
