--- a/configurations.json
+++ b/configurations.json
@@ -28,7 +28,7 @@
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
         "batch_size": 6,
         "epochs": 240,
-        "use_fasttext": true,
+        "use_fasttext": false,
         "use_secondemb": true,
         "use_decay": true,
         "features_dir": "data/features/",
@@ -40,7 +40,7 @@
         "processed_sent": "data/processed/sentences.npy",
         "processed_arg_list": "data/processed/arg_list.npy",
         "processed_padded_sent": "data/processed/padded_sent.npy",
-        "model_path":"models/ft_240_0.0006"
+        "model_path":"models/wv_240_0.00075"
     },
     "fasttext": {
         "srl_labels": ["ARG0","ARG1","ARG2","AM-MOD","AM-ADV","REL","AM-TMP","AM-CAU","AM-LOC","AM-DIR", "AM-MNR","AM-DIS","AM-PRD","ARG3","ARG4","AM-LVB","AM-PRP","AM-COM","AM-GOL","AM-EXT","AM-REC","AM-NEG","AM-ADJ"],
