--- a/configurations.json
+++ b/configurations.json
@@ -31,6 +31,7 @@
         "use_fasttext": false,
         "use_secondemb": true,
         "use_decay": true,
+        "use_pruning": false,
         "features_dir": "data/features/",
         "features_1": "word_emb_w2v.npy",
         "features_1.1": "word_emb_ft.npy",
