--- a/configurations.json
+++ b/configurations.json
@@ -23,15 +23,16 @@
         "mlp_pred_units": 300,
         "mlp_arg_units": 300,
         "span_width_emb": 20,
-        "train_data": "/data/raw/batch1.csv",
-        "word_emb_path":"data/pretrained/word2vec_news.model",
-        "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
         "batch_size": 6,
         "epochs": 240,
         "use_fasttext": false,
         "use_secondemb": true,
         "use_decay": true,
         "use_pruning": false,
+        "learning_rate": 0.001,
+        "train_data": "/data/raw/batch1.csv",
+        "word_emb_path":"data/pretrained/word2vec_news.model",
+        "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
         "features_dir": "data/features/",
         "features_1": "word_emb_w2v.npy",
         "features_1.1": "word_emb_ft.npy",
