--- a/configurations.json
+++ b/configurations.json
@@ -17,18 +17,18 @@
         "lstm_layers": 2,
         "lstm_units": 200,
         "lstm_dropout": 0.4,
-        "num_heads": 2,
+        "num_heads": 1,
         "unary_depth": 2,
         "unary_units": 100,
         "mlp_pred_units": 300,
         "mlp_arg_units": 300,
         "span_width_emb": 20,
-        "batch_size": 4,
+        "batch_size": 6,
         "epochs": 240,
         "use_fasttext": false,
         "use_secondemb": true,
         "use_decay": true,
-        "use_pruning": false,
+        "use_pruning": true,
         "learning_rate": 0.001,
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
