--- a/configurations.json
+++ b/configurations.json
@@ -28,8 +28,8 @@
         "use_fasttext": false,
         "use_secondemb": true,
         "use_decay": true,
-        "use_pruning": true,
-        "learning_rate": 0.001,
+        "use_pruning": false,
+        "learning_rate": 5e-3,
         "train_data": "/data/raw/batch1.csv",
         "word_emb_path":"data/pretrained/word2vec_news.model",
         "fasttext_emb_path": "data/pretrained/kyubyong.ft.id.bin",
