--- a/configurations.json
+++ b/configurations.json
@@ -36,7 +36,7 @@
         "features_dir": "data/features/",
         "features_1": "word_emb_w2v.npy",
         "features_1.1": "word_emb_ft.npy",
-        "features_2":"bert.npy",
+        "features_2":"word_emb_bert.npy",
         "features_3": "char_input.npy",
         "output": "output.npy",
         "processed_sent": "data/processed/sentences.npy",
