--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-pipreqs 
-
+gensim==4.1.2
+numpy==1.22.0
+pandas==1.3.5
+scikit_learn==1.0.2
+tensorflow==2.7.0
+torch==1.10.0
+tqdm==4.62.3
+transformers==4.15.0
