--- a/configurations.json
+++ b/configurations.json
@@ -39,7 +39,7 @@
         "features_2":"full_word_emb_bert.npy",
         "features_3": "full_char_input.npy",
         "output": "full_output.npy",
-        "model_path":"models/ft_default"
+        "model_path":"../drive/MyDrive/TA/ft_default"
     },
     "full": {
         "srl_labels": ["ARG0","ARG1","ARG2","AM-MOD","AM-ADV","REL","AM-TMP","AM-CAU","AM-LOC","AM-DIR", "AM-MNR","AM-DIS","AM-PRD","ARG3","ARG4","AM-LVB","AM-PRP","AM-COM","AM-GOL","AM-EXT","AM-REC","AM-NEG","AM-ADJ"],
