--- a/configurations.json
+++ b/configurations.json
@@ -26,7 +26,7 @@
         "batch_size": 8,
         "epochs": 240,
         "use_fasttext": false,
-        "use_constraint": false,
+        "use_constraint": true,
         "use_pruning": false,
         "learning_rate": 1e-3,
         "train_data": "data/raw/test.txt",
